[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# We use a cusom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.9"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32.0"
procfs = "0.17.0"
