<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>jszr_monitor</name>
  <version>0.0.1</version>
  <description>CPU Memory monitor</description>
  <maintainer email="jialomg62@gmail.com">kanonwy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jszr_robots_dog_msg</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>jszr_robots_dog_msg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
